monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana-ingress
    namespace: monitoring
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
    tls:
        - hosts:
            - grafana.jonathanlore.fr
          secretName: grafana-tls
    rules:
        - host: grafana.jonathanlore.fr
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kube-prometheus-stack-grafana
                            port:
                                number: 80
